updated two ticket page and also link all pages

--- a/eventsPage.html
+++ b/eventsPage.html
@@ -23,7 +23,7 @@
         </div>
         <div class="routes">
           <ul>
-            <li class="eventlink"><a href="#">My Tickets</a></li>
+            <li class="eventlink"><a href="ticket1.html">My Tickets</a></li>
             <li class="eventlink"><a href="#">Events</a></li>
           </ul>
         </div>
@@ -48,7 +48,7 @@
             <input type="text"  placeholder="Search by event, venue, or location.. "/>
           </div>
         <div class="btn">
-          <button>Find Event</button>
+          <button><a href="https://www.allconferencealert.com/abuja.html">Find Event Outside Our Reach</a></button>
         </div>
       </div>
     </div>
@@ -178,7 +178,7 @@
       <!-- Event Button -->
       <div class="event-button">
         <div class="btn">
-            <button>Get Ticket</button>
+            <button><a href="ticket1.html">Get Ticke</a>t</button>
           </div>
         <div class="btn">
             <button>Book Event</button>
