--- a/landingpage.html
+++ b/landingpage.html
@@ -39,7 +39,7 @@
           </h6>
         </div>
         <div class="btn">
-          <button><a href="./signUp.html">Get Started</a></button>
+          <button><a href="./eventsPage.html">Get Started</a></button>
         </div>
       </div>
     </div>
@@ -48,7 +48,7 @@
         <img src="./assets/img1.svg" alt="" />
       </div>
       <div class="chooseUs">
-        <h1>Why Choose EventMate</h1>
+        <h1>Why Choose EventMate?</h1>
         <p>
           The UK event industry is filled with challenges: scattered event
           information, disconnected attendees, and inefficient venue management.
@@ -67,8 +67,7 @@
               <p>Organizers</p>
             </div>
             <p>
-              Create, promote, and manage your events with ease. Our intuitive
-              tools and analytics help you boost engagement and ticket sales.
+              Create, promote, and manage your events with ease. Our intuitive tools and analytics help you boost engagement and ticket sales.
             </p>
           </div>
           <div class="solution-cards">
@@ -77,8 +76,7 @@
               <p>Venues</p>
             </div>
             <p>
-              Create, promote, and manage your events with ease. Our intuitive
-              tools and analytics help you boost engagement and ticket sales.
+              Maximize your venue’s potential. List your space, manage bookings, and attract more organizers looking for the perfect place.
             </p>
           </div>
           <div class="solution-cards">
@@ -87,8 +85,7 @@
               <p>Attendees</p>
             </div>
             <p>
-              Create, promote, and manage your events with ease. Our intuitive
-              tools and analytics help you boost engagement and ticket sales.
+              Discover events that match your interests, connect with like-minded people, and enjoy seamless event experiences.
             </p>
           </div>
         </div>
@@ -136,9 +133,7 @@
                 success.
               </p>
             </div>
-          </div>
-        </div>
-      </div>
+            </div>
       <div class="how-it-works">
         <div class="how-it-works-text">
           <h1>How it Works Section</h1>
