--- a/findmore.html
+++ b/findmore.html
@@ -12,7 +12,6 @@
   </head>
   <body>
     <!-- Section 1 -->
-    <div class="main">
       <div class="nav">
         <div class="logo">
           <a href="./index.html"><img src="./assets/Logo.svg" alt="" /></a>
@@ -23,7 +22,7 @@
         </div>
         <div class="routes">
           <ul>
-            <li><a href="findmore.html">Find more event</a></li>
+            <li><a href="organiser.html">Find more event</a></li>
             <li><a href="organiser.html">Organiser</a></li>
             <li><a href="vendorpage.html">Vendor</a></li>
           </ul>
@@ -36,32 +35,10 @@
           <span>Account</span>
       </div>
       </div>
-      <div class="main-text">
-        <div class="links">
-          <a href="#">Search by events</a>
-          <a href="#">Search by Vendor</a>
-        </div>
-        <div>
-            <div>
-                <h6>
-                    Looking for something fun to do? From local parties to grand events, find what excites you and never miss out on the action.
-                  </h6>
-            </div>
-         
-        </div>
-        <div class="main-search">
-            <i class="bi bi-search"></i>
-            <input type="text"  placeholder="Search by event, venue, or location.. "/>
-          </div>
-        <div class="btn">
-          <button><a href="https://www.allconferencealert.com/abuja.html">Find Event Near You</a></button>
-        </div>
-      </div>
-    </div>
     <!-- Section 2 -->
     <div class="hero-section">
       <div class="events">
-        <h2>Discover Events You'll Love - Anytime, AnyWhere!</h2>
+        <h2>Discover more Events You'll Love to Attend Anytime, AnyWhere!</h2>
         <div class="events-row">
           <div class="events-cards">
             <div class="cards-head">
@@ -136,6 +113,154 @@
             </p>
           </div>
         </div>
+        <div class="events-row">
+            <div class="events-cards">
+              <div class="cards-head">
+                  <img src="./assets/advertisement1.png" alt="">
+              </div>
+              <h3><a href="ticket1.html">Book Canival</a></h3>
+              <p>
+               5th december
+              </p>
+            </div>
+            <div class="events-cards">
+              <div class="cards-head">
+               <img src="./assets/2019.png" alt="">
+              </div>
+              <h3><a href="ticket1.html">Business owners</a></h3>
+              <p>
+               25th October
+              </p>
+            </div>
+            <div class="events-cards">
+              <div class="cards-head">
+                  <img src="./assets/technology.png" alt="">
+              </div>
+              <h3><a href="ticket1.html">Abuja Techs</a></h3>
+              <p>
+               30th June
+              </p>
+            </div>
+            <div class="events-cards">
+              <div class="cards-head">
+                  <img src="./assets/white woman.png" alt=""> 
+              </div>
+              <h3><a href="ticket1.html">word outreach</a></h3>
+              <p>
+               15th October
+              </p>
+            </div>
+            <div class="events-cards">
+              <div class="cards-head">
+                  <img src="./assets/music.png" alt="">  
+              </div>
+              <h3><a href="ticket1.html">Music Fest</a></h3>
+              <p>
+               20th October
+              </p>
+            </div>
+            <div class="events-cards">
+              <div class="cards-head">
+                  <img src="./assets/img6.svg" alt="">
+              </div>
+              <h3><a href="ticket1.html">Word outreach</a></h3>
+              <p>
+               5th May
+              </p>
+            </div>
+            <div class="events-cards">
+              <div class="cards-head">
+                  <img src="./assets/teacher (2).png" alt="">
+              </div>
+              <h3><a href="ticket1.html">Lectures</a></h3>
+              <p>
+               5th October
+              </p>
+            </div>
+            <div class="events-cards">
+              <div class="cards-head">
+                  <img src="./assets/2019.png" alt=""> 
+              </div>
+              <h3><a href="ticket1.html">World Business</a></h3>
+              <p>
+               30th October
+              </p>
+            </div>
+          </div>
+          <div class="events-row">
+            <div class="events-cards">
+              <div class="cards-head">
+                  <img src="./assets/advertisement1.png" alt="">
+              </div>
+              <h3><a href="ticket1.html">Book Canival</a></h3>
+              <p>
+               5th december
+              </p>
+            </div>
+            <div class="events-cards">
+              <div class="cards-head">
+               <img src="./assets/2019.png" alt="">
+              </div>
+              <h3><a href="ticket1.html">Business owners</a></h3>
+              <p>
+               25th October
+              </p>
+            </div>
+            <div class="events-cards">
+              <div class="cards-head">
+                  <img src="./assets/technology.png" alt="">
+              </div>
+              <h3><a href="ticket1.html">Abuja Techs</a></h3>
+              <p>
+               30th June
+              </p>
+            </div>
+            <div class="events-cards">
+              <div class="cards-head">
+                  <img src="./assets/white woman.png" alt=""> 
+              </div>
+              <h3><a href="ticket1.html">word outreach</a></h3>
+              <p>
+               15th October
+              </p>
+            </div>
+            <div class="events-cards">
+              <div class="cards-head">
+                  <img src="./assets/music.png" alt="">  
+              </div>
+              <h3><a href="ticket1.html">Music Fest</a></h3>
+              <p>
+               20th October
+              </p>
+            </div>
+            <div class="events-cards">
+              <div class="cards-head">
+                  <img src="./assets/img6.svg" alt="">
+              </div>
+              <h3><a href="ticket1.html">Word outreach</a></h3>
+              <p>
+               5th May
+              </p>
+            </div>
+            <div class="events-cards">
+              <div class="cards-head">
+                  <img src="./assets/teacher (2).png" alt="">
+              </div>
+              <h3><a href="ticket1.html">Lectures</a></h3>
+              <p>
+               5th October
+              </p>
+            </div>
+            <div class="events-cards">
+              <div class="cards-head">
+                  <img src="./assets/2019.png" alt=""> 
+              </div>
+              <h3><a href="ticket1.html">World Business</a></h3>
+              <p>
+               30th October
+              </p>
+            </div>
+          </div>
         <p class="eventlink"><a href="#">View more</a></p>
       </div>
       <!--  -->
