--- a/landingpage.html
+++ b/landingpage.html
@@ -8,9 +8,9 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
-    <title>Document</title>
+    <title>landingPage</title>
   </head>
-  <body>
+  <body> 
     <div class="main">
       <div class="nav">
         <div class="logo">
@@ -26,7 +26,6 @@
             <li class="navlink"><a href="./signin.html">Log In</a></li>
           </ul>
         </div>
-        
       </div>
       <div class="main-text">
         <div>
@@ -45,7 +44,7 @@
     </div>
     <div class="hero-section">
       <div class="image">
-        <img src="./assets/img1.svg" alt="" />
+        <img src="./assets/img1.svg" alt="" width="100%"/>
       </div>
       <div class="chooseUs">
         <h1>Why Choose EventMate?</h1>
